--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
+    "sockjs": "^0.3.20",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
