--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "fibers": "^4.0.2",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
+    "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "sockjs": "^0.3.20",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
